cpp_sdk/examples/sdk_test_cpp/src/errorcompile.txt
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
../../../sdk/include\spacetimedb/macros.h:286:8: error: unknown type name 'RegisterSanitizedCppTypeName'
  286 | static SPACETIMEDB_PASTE(Register, SanitizedCppTypeName) SPACETIMEDB_PASTE(register_, SPACETIMEDB_PASTE(SanitizedCppTypeName, _instance)); \
      |        ^
../../../sdk/include\spacetimedb/macros.h:21:33: note: expanded from macro 'SPACETIMEDB_PASTE'
   21 | #define SPACETIMEDB_PASTE(a, b) SPACETIMEDB_PASTE_IMPL(a, b)
      |                                 ^
../../../sdk/include\spacetimedb/macros.h:20:38: note: expanded from macro 'SPACETIMEDB_PASTE_IMPL'
   20 | #define SPACETIMEDB_PASTE_IMPL(a, b) a##b
      |                                      ^
<scratch space>:359:1: note: expanded from here
  359 | RegisterSanitizedCppTypeName
      | ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
../../../sdk/include\spacetimedb/macros.h:286:140: error: extraneous closing brace ('}')
  286 | static SPACETIMEDB_PASTE(Register, SanitizedCppTypeName) SPACETIMEDB_PASTE(register_, SPACETIMEDB_PASTE(SanitizedCppTypeName, _instance)); \
      |                                                                                                                                            ^
../../../sdk/include\spacetimedb/macros.h:288:1: error: extraneous closing brace ('}')
  288 | } \
      | ^
../../../sdk/include\spacetimedb/macros.h:291:5: error: unknown type name 'CppTypeName'
  291 |     CppTypeName SPACETIMEDB_PASTE(deserialize_, SanitizedCppTypeName)(::bsatn::Reader& reader); \
      |     ^
../../../sdk/include\spacetimedb/macros.h:293:58: error: unknown type name 'CppTypeName'
  293 |     inline void serialize(::bsatn::Writer& writer, const CppTypeName& value) {
      |                                                          ^
../../../sdk/include\spacetimedb/macros.h:295:22: error: use of undeclared identifier 'SPACETIMEDB_XX_SERIALIZE_FIELD'
  295 |         FIELDS_MACRO(SPACETIMEDB_XX_SERIALIZE_FIELD, writer, value); \
      |                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:300:8: error: unknown type name 'CppTypeName'
  300 | inline CppTypeName deserialize<CppTypeName>(::bsatn::Reader& reader) {
      |        ^
../../../sdk/include\spacetimedb/macros.h:300:32: error: use of undeclared identifier 'CppTypeName'
  300 | inline CppTypeName deserialize<CppTypeName>(::bsatn::Reader& reader) {
      |                                ^~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:305:20: error: unknown type name 'CppTypeName'
  305 |             inline CppTypeName SPACETIMEDB_PASTE(deserialize_, SanitizedCppTypeName)(::bsatn::Reader& reader) {
      |                    ^
../../../sdk/include\spacetimedb/macros.h:307:17: error: unknown type name 'CppTypeName'
  307 |                 CppTypeName obj; \
      |                 ^
../../../sdk/include\spacetimedb/macros.h:308:30: error: use of undeclared identifier 'SPACETIMEDB_XX_DESERIALIZE_FIELD'
  308 |                 FIELDS_MACRO(SPACETIMEDB_XX_DESERIALIZE_FIELD, reader, obj); \
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from sdk_test.cpp:1:
.\sdk_test.h:47:1: error: no function template matches function template specialization 'deserialize'
   47 | SPACETIMEDB_TYPE_ENUM(
      | ^
../../../sdk/include\spacetimedb/macros.h:134:28: note: expanded from macro 'SPACETIMEDB_TYPE_ENUM'
  134 |         inline CppTypeName deserialize<CppTypeName>(::bsatn::Reader& reader) { \
      |                            ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:250:23: error: no member named 'bsatn' in namespace 'SpacetimeDB'; did you mean simply 'bsatn'?
  250 | inline void serialize(SpacetimeDB::bsatn::Writer& writer, const EnumWithPayloadTag& value) {
      |                       ^~~~~~~~~~~~~~~~~~
      |                       bsatn
.\sdk_test.h:47:1: note: 'bsatn' declared here
   47 | SPACETIMEDB_TYPE_ENUM(
      | ^
../../../sdk/include\spacetimedb/macros.h:125:15: note: expanded from macro 'SPACETIMEDB_TYPE_ENUM'
  125 |     namespace bsatn { /* Functions in global bsatn namespace */ \
      |               ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:250:36: error: expected unqualified-id
  250 | inline void serialize(SpacetimeDB::bsatn::Writer& writer, const EnumWithPayloadTag& value) {
      |                                    ^
.\sdk_test.h:250:23: error: expected parameter declarator
  250 | inline void serialize(SpacetimeDB::bsatn::Writer& writer, const EnumWithPayloadTag& value) {
      |                       ^
.\sdk_test.h:250:36: error: expected ')'
  250 | inline void serialize(SpacetimeDB::bsatn::Writer& writer, const EnumWithPayloadTag& value) {
      |                                    ^
.\sdk_test.h:250:22: note: to match this '('
  250 | inline void serialize(SpacetimeDB::bsatn::Writer& writer, const EnumWithPayloadTag& value) {
      |                      ^
.\sdk_test.h:251:5: error: use of undeclared identifier 'writer'; did you mean 'fwrite'?
  251 |     writer.write_u8(static_cast<uint8_t>(value));
      |     ^~~~~~
      |     fwrite
C:\Users\ludvi\emsdk\upstream\emscripten\cache\sysroot/include\stdio.h:100:8: note: 'fwrite' declared here
  100 | size_t fwrite(const void *__restrict, size_t, size_t, FILE *__restrict);
      |        ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:251:11: error: member reference base type 'size_t (const void *__restrict, size_t, size_t, FILE *__restrict)' (aka 'unsigned long (const void *__restrict, unsigned long, unsigned long, _IO_FILE *__restrict)') is not a structure or union
  251 |     writer.write_u8(static_cast<uint8_t>(value));
      |     ~~~~~~^~~~~~~~~
.\sdk_test.h:251:42: error: use of undeclared identifier 'value'; did you mean 'std::money_base::value'?
  251 |     writer.write_u8(static_cast<uint8_t>(value));
      |                                          ^~~~~
      |                                          std::money_base::value
C:\Users\ludvi\emsdk\upstream\emscripten\cache\sysroot/include/c++/v1\locale:2212:42: note: 'std::money_base::value' declared here
 2212 |   enum part { none, space, symbol, sign, value };
      |                                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
emcc: error: ''C:/Users/ludvi/emsdk/upstream/bin\clang.exe' -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr '--sysroot=C:\Users\ludvi\emsdk\upstream\emscripten\cache\sysroot' -DEMSCRIPTEN -Xclang '-iwithsysroot/include\fakesdl' -Xclang '-iwithsysroot/include\compat' -std=c++20 -I../../../sdk/include -c sdk_test.cpp -o 'C:\Users\ludvi\AppData\Local\Temp\emscripten_temp_wne14scw\sdk_test_0.o'' failed (returned 1)
